--- a/waiting-list-widget/src/widget.html
+++ b/waiting-list-widget/src/widget.html
@@ -14,7 +14,7 @@
   <!-- Form -->
   <div class="tw-w-full tw-h-full tw-absolute tw-transition tw-duration-150" x-cloak x-show="waitingList.form.showingForm" x-transition:enter="tw-ease-out" x-transition:enter-start="tw-opacity-0" x-transition:enter-end="tw-opacity-100" x-transition:leave="tw-ease-in" x-transition:leave-start="tw-opacity-100" x-transition:leave-end="tw-opacity-0">
     <form class="tw-w-full" x-on:submit.prevent="waitingList.form.submit($event.target.querySelector('[name=email]').value, 'Top Form')">
-      <h4 class="tw-text-2xl tw-text-center tw-mt-12 tw-mb-10 tw-font-semibold">Join the waiting list for early access:</h4>
+      <h4 class="tw-text-2xl tw-text-center tw-mt-12 tw-mb-10 tw-font-semibold">Join over 2500+ others for early access:</h4>
       <div class="sm:tw-inline-flex tw-justify-center tw-w-full">
         <div class="tw-rounded-full sm:tw-w-1/2 tw-h-12">
           <input type="email" name="email" x-model.debounce="waitingList.form.emailAddress" required placeholder="Enter your email address" class="tw-w-full tw-h-full tw-px-5 tw-bg-gray-200 tw-rounded-full tw-border-none" />
